Fix tag alignment with title.

--- a/web/themes/custom/goddard_uswds_sub/assets/styles/scss/_base.scss
+++ b/web/themes/custom/goddard_uswds_sub/assets/styles/scss/_base.scss
@@ -94,6 +94,7 @@ button:focus, button:active {
     .field--name-field-tags {
       margin-top: -30px;
       margin-bottom: 30px;
+      margin-left: 5px;
 
       &:before {
         content: "Tags:";
